// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`duplicate-omf-motion should duplicate a motion that plays once 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Copied motion 'idle' to 'idle_once', playing once, written into <sandbox>/duplicated-once.omf",
  ],
}
`;

exports[`duplicate-omf-motion should duplicate a motion under a new name 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Copied motion 'idle' to 'idle_copy', written into <sandbox>/duplicated.omf",
  ],
}
`;

exports[`duplicate-omf-motion should read back the duplicated motion 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <sandbox>/duplicated.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 4 idle,svd_shoot,svd_reload,idle_copy",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,wpn_scope,zatvor,lock,magazin",
  ],
}
`;

exports[`duplicate-omf-motion should rewrite in place when given no destination 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Copied motion 'idle' to 'idle_copy', written into <sandbox>/in-place.omf",
  ],
}
`;

exports[`duplicate-omf-motion should write the expected files 1`] = `
[
  {
    "path": "duplicated-once.omf",
    "sha256": "d55eb93e317f9c29180809868725ba1a9645b484e2be54c4bca1f0fe58955319",
    "size": 3562,
  },
  {
    "path": "duplicated.omf",
    "sha256": "d73bc7e8ed9dda81ef4827ef46b48e465b7dc4af8f0c93c0537da66d3d386c82",
    "size": 3562,
  },
  {
    "path": "in-place.omf",
    "sha256": "d73bc7e8ed9dda81ef4827ef46b48e465b7dc4af8f0c93c0537da66d3d386c82",
    "size": 3562,
  },
]
`;
